# GameZero

./: .gitignore  .gitmodules  Build.sh  CMakeLists.txt  Clean.sh  GameZero  GameZero.kdev4  README.md  Run.sh  UpdateProjectSubmodules.sh  run.sh
.kdev4/: GameZero.kdev4
cmake/: compile_shader.cmake
mesh/: GolemMan.mtl  GunBike-0-GunBike.mtl
shaders/: shader.frag  shader.vert
source/: CMakeLists.txt  app_state.hpp  camera.cpp  camera.hpp  common.hpp  device.hpp  event.hpp  gamezero.hpp  main.cpp  math.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  settings.hpp  shader.hpp  swapchain.hpp  texture.cpp  texture.hpp  utils.hpp  vulkan.hpp  vulkan_types.hpp  window.cpp  window.hpp  window_impl.hpp
source/math/: math.hpp  vector.hpp
source/utils/: assert.hpp  destruction_queue.hpp  file.hpp  log.hpp  sdl_helper.hpp  singleton.hpp  utils.hpp  vk_mem_alloc.cpp  vk_result_string.hpp  vulkan_initializers.hpp
source/vulkan/: device.cpp  device.hpp  globals.cpp  globals.hpp  image.hpp  instance.cpp  instance.hpp  surface.cpp  surface.hpp  surface_details.cpp  surface_details.hpp  swapchain.cpp  swapchain.hpp  types.hpp  vk_mem_alloc.cpp
trash/: CMakeLists.txt.backup
